--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,9 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+      # 4️⃣ Upload JAR as artifact (optional)
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: target/*.jar
